--- a/src/views/admin-views/admin-edit-product.ejs
+++ b/src/views/admin-views/admin-edit-product.ejs
@@ -1,6 +1,6 @@
 <div class="container-content ">
     <div class="name-page ">
-        <div class="container-2">
+        <div class="container-2" id="idProductFull" idFull="<%= data.productFull._id %>">
             Chi tiết sản phẩm
         </div>
     </div>
