--- a/src/views/admin-views/aside.ejs
+++ b/src/views/admin-views/aside.ejs
@@ -21,11 +21,11 @@
                     <i class="fa fa-th" aria-hidden="true"></i>
                     <span class="hide-menu">Blogs</span>
                 </a></li>
-            <li><a href="#">
+            <li><a href="/admin/info">
                     <i class="fa fa-info" aria-hidden="true"></i>
                     <span class="hide-menu">Thông tin</span>
                 </a></li>
-            <li><a href="#">
+            <li><a href="/admin/accounts">
                     <i class="fa fa-users" aria-hidden="true"></i>
                     <span class="hide-menu">Tài khoản</span>
                 </a></li>
