--- a/src/views/admin-views/products-view/admin-add-product.ejs
+++ b/src/views/admin-views/products-view/admin-add-product.ejs
@@ -25,9 +25,9 @@
                         <div class="input-control">
                             <select name="gender" id="gender">
 
-                                <option value="nam">Nam</option>
-                                <option value="nữ">Nữ</option>
-                                <option value="unisex">Unisex</option>
+                                <option value="Nam">Nam</option>
+                                <option value="Nữ">Nữ</option>
+                                <option value="Unisex">Unisex</option>
                             </select>
                         </div>
                     </div>
