--- a/src/views/admin-views/products-view/admin-products.ejs
+++ b/src/views/admin-views/products-view/admin-products.ejs
@@ -104,7 +104,8 @@
                                                 aria-hidden="true"></i></a>
                                     </div>
                                     <div class="delete-product">
-                                        <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                                        <a href="#" idProduct="<%= product._id %>" onclick="deleteProduct(event)"><i
+                                                class="fa fa-trash" aria-hidden="true"></i></a>
                                     </div>
                                 </td>
                             </tr>
