change cost in home

--- a/src/public/css/admin-css/info.css
+++ b/src/public/css/admin-css/info.css
@@ -42,4 +42,12 @@
 .button-submit button:hover {
   opacity: 0.8;
 }
+
+.slide-preview img {
+  width: 100px;
+}
+
+.thongbao-preview img {
+  width: 100px;
+}
 /*# sourceMappingURL=info.css.map */
