--- a/src/views/admin-views/products-view/admin-add-product.ejs
+++ b/src/views/admin-views/products-view/admin-add-product.ejs
@@ -44,6 +44,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="label-group">Giá tiền cũ</label>
+                        <div class="input-control">
+                            <input type="number" min="100000" id="oldcost" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="label-group" for="image">Chọn ảnh</label>
                         <div class="input-control">
                             <input type="file" id="image">
