--- a/src/views/admin-views/products-view/admin-products.ejs
+++ b/src/views/admin-views/products-view/admin-products.ejs
@@ -91,7 +91,7 @@
                                             <option value="false">Hết hàng</option>
                                         </select>
                                         <% } else{ %>
-                                            <select name="status" id="">
+                                            <select name="status" id="" style="border: 1px solid red;">
                                                 <option value="true">Có hàng</option>
                                                 <option value="false" selected>Hết hàng</option>
                                             </select>
