--- a/src/public/css/page-css/products.css
+++ b/src/public/css/page-css/products.css
@@ -311,149 +311,254 @@ a {
   padding: 0 5px;
   overflow: hidden; }
 
-.slick-dots li button:before {
-  font-size: 12px; }
-
-.slider {
-  z-index: 8; }
-  .slider .slider__show .image img {
-    width: 100%; }
-
-.nam {
-  padding-top: 40px;
-  background-color: #fff; }
-  .nam .nam__namelist {
-    text-transform: uppercase;
-    text-align: center;
-    padding: 10px; }
-  .nam .nam__list {
-    position: relative; }
-    .nam .nam__list * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Nunito Sans", sans-serif; }
-    .nam .nam__list a {
-      text-decoration: none;
-      color: #231f20; }
-    .nam .nam__list .wrapper {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box; }
-    .nam .nam__list .container {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 0 5px;
-      overflow: hidden; }
-    .nam .nam__list .nam__list__boxed {
-      width: 200px;
-      height: 330px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      border-radius: 4px;
-      padding: 0 20px;
-      margin: 5px 10px;
-      transition: 0.5s ease; }
-      .nam .nam__list .nam__list__boxed:hover {
-        transition: 0.5s ease;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; }
-      .nam .nam__list .nam__list__boxed a {
-        color: #231f20; }
-      .nam .nam__list .nam__list__boxed img {
-        height: 180px;
-        object-fit: cover;
-        flex-shrink: 0; }
-      .nam .nam__list .nam__list__boxed .boxed__box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        flex-grow: 1; }
-        .nam .nam__list .nam__list__boxed .boxed__box .boxed__box__name {
-          text-align: center;
-          font-size: 14px;
-          flex-grow: 1; }
-        .nam .nam__list .nam__list__boxed .boxed__box .boxed__box__price {
-          font-size: 16px;
-          padding: 2px 0; }
-          .nam .nam__list .nam__list__boxed .boxed__box .boxed__box__price .boxed__box__price--new {
-            font-weight: 600;
-            color: #e66d6d; }
-          .nam .nam__list .nam__list__boxed .boxed__box .boxed__box__price .boxed__box__price--old {
-            font-size: 14px;
-            text-decoration: line-through;
-            color: #a3a1a1; }
-        .nam .nam__list .nam__list__boxed .boxed__box .boxed__box__refund span {
-          font-size: 12px; }
-    .nam .nam__list .boxed__add {
-      margin: 10px 0;
-      flex-grow: 0; }
-      .nam .nam__list .boxed__add .boxed__add--button {
-        padding: 5px 10px;
-        border: none;
-        outline: none;
-        background-color: #231f20;
-        color: #fafafa;
-        cursor: pointer; }
-    .nam .nam__list .slick-arrow {
-      position: absolute !important;
-      font-size: 46px;
-      cursor: pointer;
-      color: #a3a1a1;
-      z-index: 10; }
-    .nam .nam__list .arrow-back-outline {
-      top: 50%;
-      left: 0; }
-    .nam .nam__list .arrow-forward-outline {
-      top: 50%;
-      right: 0; }
-
-.thongbao {
-  padding: 50px 0; }
-  .thongbao img {
-    width: 100%; }
-
-.blogs {
-  padding: 20px 0; }
-  .blogs h1 {
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-    padding: 30px 0; }
-  .blogs .list__blogs .list__blogs--blog {
-    margin-left: 30px;
-    padding: 20px;
-    background-color: #fff; }
-    .blogs .list__blogs .list__blogs--blog img {
-      width: 100%; }
-    .blogs .list__blogs .list__blogs--blog h4 {
-      padding: 20px 10px;
-      color: #231f20; }
-    .blogs .list__blogs .list__blogs--blog :hover {
-      opacity: 80%; }
-
-.social .all-social {
+.nam__list__boxed {
+  width: 200px;
+  height: 330px;
   display: flex;
-  justify-content: center;
-  padding: 50px 0 80px 0; }
-  .social .all-social div {
-    padding: 0 10px;
-    font-size: 36px; }
-    .social .all-social div a {
-      color: #231f20; }
-    .social .all-social div :hover {
-      opacity: 80%; }
+  flex-direction: column;
+  align-items: center;
+  border-radius: 4px;
+  padding: 0 20px;
+  margin: 5px 10px;
+  transition: 0.5s ease; }
+  .nam__list__boxed:hover {
+    transition: 0.5s ease;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; }
+  .nam__list__boxed a {
+    color: #231f20; }
+  .nam__list__boxed img {
+    height: 180px;
+    object-fit: cover;
+    flex-shrink: 0; }
+  .nam__list__boxed .boxed__box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1; }
+    .nam__list__boxed .boxed__box .boxed__box__name {
+      text-align: center;
+      font-size: 14px;
+      flex-grow: 1; }
+    .nam__list__boxed .boxed__box .boxed__box__price {
+      font-size: 16px;
+      padding: 2px 0; }
+      .nam__list__boxed .boxed__box .boxed__box__price .boxed__box__price--new {
+        font-weight: 600;
+        color: #e66d6d; }
+      .nam__list__boxed .boxed__box .boxed__box__price .boxed__box__price--old {
+        font-size: 14px;
+        text-decoration: line-through;
+        color: #a3a1a1; }
+    .nam__list__boxed .boxed__box .boxed__box__refund span {
+      font-size: 12px; }
 
-.slider__show {
-  position: relative;
-  z-index: 8; }
+.boxed__add {
+  margin: 10px 0;
+  flex-grow: 0; }
+  .boxed__add .boxed__add--button {
+    padding: 5px 10px;
+    border: none;
+    outline: none;
+    background-color: #231f20;
+    color: #fafafa;
+    cursor: pointer; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif; }
+
+a {
+  text-decoration: none;
+  color: #231f20; }
+
+.wrapper {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 5px;
+  overflow: hidden; }
+
+.opacity-20 {
+  opacity: 20%; }
+
+.cusors-default {
+  cursor: default !important; }
+
+.pointer-event-none {
+  pointer-events: none; }
+
+.breadcrumb ul {
+  list-style: none;
+  display: flex; }
+  .breadcrumb ul li {
+    margin-right: 10px; }
+    .breadcrumb ul li a:hover {
+      text-decoration: underline; }
+
+.content-below {
+  margin-top: 50px; }
+
+.products-main {
+  display: flex;
+  justify-content: space-between; }
+
+.filter-name {
+  border-bottom: 2px solid #231f20;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 4px 0;
+  margin-bottom: 10px; }
+
+.filter a:hover {
+  text-decoration: underline; }
+
+.filter .filter__ten {
+  margin: 20px 0; }
+  .filter .filter__ten input {
+    padding: 4px 2px;
+    margin: 4px 0;
+    outline: none; }
+  .filter .filter__ten button {
+    color: #fafafa;
+    padding: 6px 4px;
+    background-color: #231f20;
+    border: none;
+    cursor: pointer; }
+
+.filter .filter__hang {
+  margin: 30px 0;
+  margin-bottom: 8px; }
+  .filter .filter__hang ul {
+    max-height: 200px;
+    overflow-y: auto; }
+  .filter .filter__hang ul::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */ }
+  .filter .filter__hang ul::-webkit-scrollbar-track {
+    background: #dbdbdb;
+    /* color of the tracking area */ }
+  .filter .filter__hang ul::-webkit-scrollbar-thumb {
+    background-color: #231f20;
+    /* color of the scroll thumb */
+    border: 1px solid #a3a1a1;
+    /* creates padding around scroll thumb */ }
+  .filter .filter__hang li {
+    margin: 4px 0; }
+
+.filter .filter__gioitinh {
+  margin: 30px 0; }
+  .filter .filter__gioitinh .list-gender {
+    display: flex;
+    justify-content: space-between; }
+
+.filter .filter__gia {
+  margin: 30px 0; }
+  .filter .filter__gia .list-cost p {
+    margin: 4px 0; }
+
+.products {
+  width: 78%;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px; }
+  .products .top-products {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 0 10px; }
+    .products .top-products .thong-ke {
+      color: #a3a1a1; }
+    .products .top-products .arange span {
+      font-weight: bold; }
+    .products .top-products .arange select {
+      padding: 6px 4px;
+      outline: none; }
+  .products .list-product {
+    margin-top: 10px;
+    padding: 20px 0; }
+    .products .list-product .wrap-product {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr; }
+    .products .list-product .nam__list__boxed {
+      width: 180px;
+      height: 320px; }
+      .products .list-product .nam__list__boxed .boxed__box__name {
+        font-size: 12px; }
+      .products .list-product .nam__list__boxed .boxed__box__price {
+        font-size: 14px; }
+      .products .list-product .nam__list__boxed .boxed__box__price--old {
+        font-size: 12px; }
+      .products .list-product .nam__list__boxed .boxed__box__refund span {
+        font-size: 10px; }
+  .products .pagination-product {
+    text-align: center;
+    padding-bottom: 20px; }
+    .products .pagination-product .pagi {
+      display: flex;
+      justify-content: center; }
+      .products .pagination-product .pagi div {
+        cursor: pointer; }
+      .products .pagination-product .pagi ion-icon {
+        font-size: 32px; }
+      .products .pagination-product .pagi .pagi__box {
+        margin: 0 10px; }
+      .products .pagination-product .pagi span {
+        line-height: 32px;
+        font-size: 18px; }
 
 /*Ipad ngang(1024 x 768)*/
+@media screen and (max-width: 1024px) {
+  .wrap-product {
+    grid-template-columns: 1fr 1fr 1fr !important; } }
+
 /*Ipad dọc(768 x 1024)*/
 @media screen and (max-width: 768px) {
-  .slider {
-    margin-top: 114px; } }
+  .content-below {
+    margin-top: 10px; }
+  .wrap-product {
+    justify-items: center;
+    grid-template-columns: 1fr 1fr !important; }
+  .breadcrumb {
+    margin-top: 120px; }
+  .filter__ten input {
+    width: 80%; } }
+
+/*Tablet nhỏ(540 x 640)*/
+@media screen and (max-width: 540px) {
+  .thong-ke {
+    width: 40%; }
+  .arange {
+    width: 40%; }
+  .wrap-product {
+    justify-items: center;
+    grid-template-columns: 1fr 1fr !important; }
+  .filter {
+    display: none; }
+  .products {
+    width: 100%;
+    margin-left: 0; } }
 
 /*Tablet nhỏ(480 x 640)*/
+@media screen and (max-width: 410px) {
+  .nam__list__boxed {
+    width: 170px !important;
+    height: 320px;
+    padding: 0 10px; } }
+
 /*Iphone(480 x 640)*/
+@media screen and (max-width: 380px) {
+  .nam__list__boxed {
+    width: 160px !important;
+    height: 320px; } }
+
 /*Smart phone nhỏ*/
+@media screen and (max-width: 280px) {
+  .wrap-product {
+    grid-template-columns: 1fr !important; } }
