--- a/src/views/admin-views/aside.ejs
+++ b/src/views/admin-views/aside.ejs
@@ -33,6 +33,10 @@
                     <i class="fa fa-cart-plus" aria-hidden="true"></i>
                     <span class="hide-menu">Khuyến mãi</span>
                 </a></li>
+            <li><a href="/admin/brands">
+                    <i class="fa fa-info" aria-hidden="true"></i>
+                    <span class="hide-menu">Thương hiệu</span>
+                </a></li>
 
 
         </ul>
