--- a/src/views/admin-views/products-view/admin-edit-product.ejs
+++ b/src/views/admin-views/products-view/admin-edit-product.ejs
@@ -148,35 +148,17 @@
                         </div>
                     </div>
                     <div class="product-full">
-                        <div class="fullseal">
-                            <label class="label-group">Fullseal</label>
-                            <input type="number" placeholder="dung tích" id="capaFullseal"
-                                value="<%= data.productFull.capaFullseal %>">
-                            <input type="number" placeholder="giá" id="costFullseal"
-                                value="<%= data.productFull.costFullseal %>">
-                            <% if(data.productFull.statusFullseal===true ){ %>
-                                <input type="checkbox" checked id="fullseal"> <label for="fullseal">Có
-                                    hàng</label>
-                                <%} else {%>
-                                    <input type="checkbox" id="fullseal"> <label for="fullseal">Có
-                                        hàng</label>
-                                    <%} %>
-
-                        </div>
-                        <div class="fulltester">
-                            <label class="label-group">Tester</label>
-                            <input type="number" placeholder="dung tích" id="capaTester"
-                                value="<%= data.productFull.capaTester %>">
-                            <input type="number" placeholder="giá" id="costTester"
-                                value="<%= data.productFull.costTester %>">
-                            <% if(data.productFull.statusTester===true ){ %>
-                                <input type="checkbox" checked id="fulltester"> <label for="fullseal">Có
-                                    hàng</label>
-                                <%} else {%>
-                                    <input type="checkbox" id="fulltester"> <label for="fullseal">Có
-                                        hàng</label>
-                                    <%} %>
-
+                        <label class="label-group">Thông tin về chai full</label>
+                        <button id="add-full">[+]</button>
+                        <div class="all-listfull">
+                            <div class="product-full__list">
+                                <input type="text" name="chai-full">
+                                <button onclick="$(this).parent().remove()">[x]</button>
+                            </div>
+                            <div class="product-full__list">
+                                <input type="text" name="chai-full">
+                                <button onclick="$(this).parent().remove()">[x]</button>
+                            </div>
                         </div>
                     </div>
                     <div class="button-submit">
