--- a/src/views/page-views/supplement/header.ejs
+++ b/src/views/page-views/supplement/header.ejs
@@ -97,9 +97,10 @@
 
                                                                     <li>
                                                                         <div class="header__mid__search2">
-                                                                            <input type="text"
+                                                                            <input type="text" id="search-2"
                                                                                 placeholder="Tìm sản phẩm...">
-                                                                            <ion-icon name="search-outline"></ion-icon>
+                                                                            <ion-icon name="search-outline"
+                                                                                class="header-search-2"></ion-icon>
                                                                         </div>
                                                                     </li>
                 </ul>
